refined streaming feedback

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,4 @@
 {
-  topic {
-    input: "galaxy"
-    output: "galaxy_result_test"
-    object: "galaxy_result_object"
-    object_routing: "galaxy_result_object_routing"
-  }
-
   stopWords: ["a", "an", "the"]
 
   windowDuration: 30s
@@ -15,7 +8,7 @@
   # all related spark configuration
   spark {
     "master": "local[*]"
-    "app-name": "Experiencehub Spark-Rabbitmq Streaming Job"
+    "app-name": "Telkomm Experiencehub Spark-Rabbitmq Streaming Job"
     "port.maxRetries": 100 // don't know why it is 100
     "streaming.backpressure.enabled": "true"
     "num-executors": 2
@@ -46,16 +39,30 @@
     "db" : "experiencehub"
     "port" : "27017"
     "collection" : {
-        "music" : "ent-user-play-music"
-        "movie" : "ent-user-play-movie"
-        "feedback" : "ent-user-feedback"
+        "music" : "music_track_histories"
+        "movie" : "movie_histories"
+        "feedback" : "messages"
     }
   }
 
   api {
-    "key" : "Basic 35cb7ebf9-3dcc-h28s-b056-2522c1eed03e"
-    "feedback" : "http://astra-capcus-api.stagingapps.net/advertisement/get"
     "feedback-local" : "http://localhost:8081/advertisement/get"
+    "music" : {
+        "check-package" : {
+            "url" : "http://api-experiencehub-stable.stagingapps.net/api/v1/offering/active-offering/"
+            "method" : "GET"
+        }
+        "send-offering" : {
+            "url" : "http://api-experiencehub-stable.stagingapps.net/api/v1/offering/active-offering/"
+            "method" : "POST"
+            "param" : "email"
+        }
+    }
+    "feedback" : {
+        "url" : "http://user-experiencehub-stable.stagingapps.net/api/v1/user/generate-os-ticket/"
+        "method" : "POST"
+        "param" : "email"
+    }
   }
 
   # for duration of batch stream process, it takes 2 second before finally all data captured on that timeframe processed
